# kernel-layer

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
kernel-layer/: Cargo.toml  build.rs
kernel-layer-common/: Cargo.toml
kernel-layer-common/src/: lib.rs
kernel-layer-ebpf/: Cargo.toml
kernel-layer-ebpf/src/: main.rs
kernel-layer/proto/: event.proto
kernel-layer/src/: main.rs  normalizer.rs  normalizer_tests.rs
